# sapi

./: README.md  pyproject.toml  sapi_report.md  sapilection.yaml
src/sapi/: api_tester.py  cli.py  tester.py  utils.py
src/sapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
